feat(web): Next.js and Supabase full-stack architecture
- Bootstrapped Next.js App Router project styled with modern sleek Tailwind components

- Added Supabase SQL schema and Next.js Auth Middleware for secure private vocabulary tracking

- Fully implemented VocabDashboard replicating 100% of Java features: Sequential/Random Practice modes, CRUD, export CSV, and batch Gemma AI Enhancement backend integration